# Bus-Beacon

./: README.md
NewBeacon/: settings.gradle.kts
NewBeacon/app/: build.gradle.kts
NewBeacon/app/src/main/: AndroidManifest.xml
NewBeacon/app/src/main/res/layout/: activity_main.xml
NewBeacon/app/src/main/res/values/: strings.xml  themes.xml
NewBeacon/gradle/: libs.versions.toml
NewBeacon/gradle/wrapper/: gradle-wrapper.properties
NewReceiver/: settings.gradle.kts
NewReceiver/app/: build.gradle.kts
NewReceiver/app/src/main/: AndroidManifest.xml
NewReceiver/app/src/main/res/values/: strings.xml  themes.xml
NewReceiver/gradle/wrapper/: gradle-wrapper.properties
ReferenceReceiver/: build.gradle  local.properties
ReferenceReceiver/app/src/main/res/layout/: activity_main.xml
TestBeacon/: settings.gradle.kts
TestBeacon/app/: build.gradle.kts
TestBeacon/app/src/main/: AndroidManifest.xml
TestBeacon/app/src/main/res/layout/: activity_main.xml
TestBeacon/app/src/main/res/values/: strings.xml  themes.xml
TestBeacon/gradle/: libs.versions.toml
TestBeacon/gradle/wrapper/: gradle-wrapper.properties
TestReceiver/: gradle.properties  settings.gradle.kts
TestReceiver/app/: build.gradle.kts
TestReceiver/app/src/main/: AndroidManifest.xml
TestReceiver/gradle/: libs.versions.toml
TestReceiver/gradle/wrapper/: gradle-wrapper.properties
backend/: backend.cabal
backend/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
frontend/: spago.dhall
(+35 files in other folders)
