cabal-version:   3.12
name:            backend
version:         0.1.0.0
license:         NONE
author:          Raghav Kumar
maintainer:      raghavcast@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable backend
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   app
    default-language: Haskell2010
